apps/vite/src/pages/tech/k8s/03-mediawiki/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mediawiki
  namespace: mediawiki
spec:
  ingressClassName: nginx
  rules:
  - host: m.s.4a.software
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: mediawiki
            port:
              number: 81
